compiler/test_files/typing/good/testfile-null.psc
class A{
}

A var = null;