compiler/test_files/typing/bad/testfile-redef-1.psc
class S { i32 a; };
class S { i32 a; i32 b; };
